docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/http/grpc_stats/v3/config.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/grpc_stats/v3/config.proto:

gRPC statistics
===============

.. _extension_envoy.filters.http.grpc_stats:


This extension may be referenced by the qualified name *envoy.filters.http.grpc_stats*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension has an unknown security posture and should only be used in deployments where both the downstream and upstream are trusted.

gRPC statistics filter
:ref:`configuration overview <config_http_filters_grpc_stats>`.

.. _envoy_v3_api_msg_extensions.filters.http.grpc_stats.v3.FilterConfig:

extensions.filters.http.grpc_stats.v3.FilterConfig
--------------------------------------------------

`[extensions.filters.http.grpc_stats.v3.FilterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/grpc_stats/v3/config.proto#L17>`_

gRPC statistics filter configuration

.. code-block:: json

  {
    "emit_filter_state": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.grpc_stats.v3.FilterConfig.emit_filter_state:

emit_filter_state
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true, the filter maintains a filter state object with the request and response message
  counts.
  
  


.. _envoy_v3_api_msg_extensions.filters.http.grpc_stats.v3.FilterObject:

extensions.filters.http.grpc_stats.v3.FilterObject
--------------------------------------------------

`[extensions.filters.http.grpc_stats.v3.FilterObject proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/grpc_stats/v3/config.proto#L27>`_

gRPC statistics filter state object in protobuf form.

.. code-block:: json

  {
    "request_message_count": "...",
    "response_message_count": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.grpc_stats.v3.FilterObject.request_message_count:

request_message_count
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Count of request messages in the request stream.
  
  
.. _envoy_v3_api_field_extensions.filters.http.grpc_stats.v3.FilterObject.response_message_count:

response_message_count
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Count of response messages in the response stream.
  
  

